##
## $Id: Makefile.am,v 1.14 2005/11/07 08:43:24 ralf Exp $
##

ACLOCAL_AMFLAGS = -I ../aclocal

SUBDIRS = itronhello itrontask01 itrontask02 itrontask03 itrontask04 \
    itronmbf01 itronmbox01 itronsem01 itrontime01

include $(top_srcdir)/../automake/subdirs.am
include $(top_srcdir)/../automake/local.am
