##
## $Id: Makefile.am,v 1.13 2009/10/24 05:40:26 ralf Exp $
##

ACLOCAL_AMFLAGS = -I aclocal

DISTCLEANFILES =
CLEANFILES =

noinst_HEADERS =
noinst_HEADERS += support/include/buffer_test_io.h
noinst_HEADERS += support/include/test_support.h
noinst_HEADERS += support/include/tmacros.h

SUBDIRS = @subdirs@

EXTRA_DIST = PROBLEMS

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
