#
# $Id: Makefile.am,v 1.11 2006/01/12 10:12:29 ralf Exp $
#

if RTEMS_ADA
include_adadir = $(includedir)/adainclude
include_ada_HEADERS = rtems.adb rtems.ads
include_ada_HEADERS += rtems-multiprocessing.adb rtems-multiprocessing.ads
endif

include $(srcdir)/preinstall.am
include $(top_srcdir)/automake/local.am
