#
#  COPYRIGHT (c) 1988-2002.
#  On-Line Applications Research Corporation (OAR).
#  All rights reserved.
#
#  $Id: Makefile.am,v 1.7 2003/12/12 13:05:03 ralf Exp $
#

noinst_SCRIPTS = texi2www texi2dvi

EXTRA_DIST = $(noinst_SCRIPTS) dir-arrow.gif prev-arrow.gif \
    missing-arrow.gif up-arrow.gif next-arrow.gif texi2www.texi

PROJECT = texi2www

# TEXINFO_TEX = $(top_srcdir)/../texinfo/texinfo.tex
# info_TEXINFOS = texi2www.texi
