## Process this file with autoconf to produce a configure script.
##
## configure.ac,v 1.5 2003/03/11 09:39:07 ralf Exp

AC_PREREQ([2.68])
AC_INIT([rtems-c-src-lib-libbsp-arm-at91sam9g20ek],[_RTEMS_VERSION],[rtems-bugs@OARcorp.com])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.11.1])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")

RTEMS_BSPOPTS_SET([ENABLE_UMON],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_UMON],
[If defined, enable use of the uMon console.])
AM_CONDITIONAL(ENABLE_UMON,test "$ENABLE_UMON" = "1")

RTEMS_BSPOPTS_SET([ENABLE_UMON_CONSOLE],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_UMON_CONSOLE],
[If defined, enable use of the MicroMonitor console device.])
AM_CONDITIONAL(ENABLE_UMON_CONSOLE,test "$ENABLE_UMON_CONSOLE" = "1")

## If ENABLE_UMON is 0 and ENABLE_UMON_CONSOLE is 1, then it is an error.
## TODO: Catch this error.

RTEMS_BSPOPTS_SET([ENABLE_USART0],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_USART0],
[If defined, enable use of the USART 0.])
AM_CONDITIONAL(ENABLE_USART0,test "$ENABLE_USART0" = "1")

RTEMS_BSPOPTS_SET([ENABLE_USART1],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_USART1],
[If defined, enable use of the USART 1.])
AM_CONDITIONAL(ENABLE_USART1,test "$ENABLE_USART1" = "1")

RTEMS_BSPOPTS_SET([ENABLE_USART2],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_USART2],
[If defined, enable use of the USART 2.])
AM_CONDITIONAL(ENABLE_USART2,test "$ENABLE_USART2" = "1")

RTEMS_BSPOPTS_SET([ENABLE_USART3],[*],[1])
RTEMS_BSPOPTS_HELP([ENABLE_USART3],
[If defined, enable use of the USART 3.])
AM_CONDITIONAL(ENABLE_USART3,test "$ENABLE_USART3" = "1")

RTEMS_BSP_CLEANUP_OPTIONS(1, 1)
RTEMS_BSP_LINKCMDS

# Explicitly list all Makefiles here
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
